dnl
dnl configure termios extension
dnl  process this file with "autoconf -l ../.." to generate 'configure'.
dnl $Id: configure.in,v 1.7 2002-07-18 10:52:22 shirok Exp $
AC_INIT(termios.c)
AC_CONFIG_HEADER(termconfig.h)
AC_CANONICAL_SYSTEM
AC_GAUCHE_INIT_EXT

# Sets the default value of INSTALL_TYPE macro.
AC_GAUCHE_INSTALL_TYPE(sys)

# Get compiler parameters which Gauche has been compiled with.
AC_GAUCHE_CC
AC_GAUCHE_FLAGS
AC_GAUCHE_OPTFLAGS

# Check for other programs.
AC_PROG_INSTALL

# Check for headers
AC_CHECK_HEADERS(pty.h util.h libutil.h)

# check for libraries
AC_SEARCH_LIBS(openpty, util, AC_DEFINE(HAVE_OPENPTY))
AC_SEARCH_LIBS(forkpty, util, AC_DEFINE(HAVE_FORKPTY))

# Set LDFLAGS to generate shared library.
AC_GAUCHE_FIX_LIBS

# Output
AC_GAUCHE_EXT_FIXUP(termios)
AC_OUTPUT(Makefile)
