dnl
dnl Configuring ext/threads
dnl
dnl $Id: configure.in,v 1.1 2002-07-14 09:53:38 shirok Exp $
AC_INIT(threads.c)
AC_GAUCHE_INIT_EXT

# Sets the default value of INSTALL_TYPE macro.
AC_GAUCHE_INSTALL_TYPE(sys)

# Get compiler parameters which Gauche has been compiled with.
AC_GAUCHE_CC
AC_GAUCHE_FLAGS

# Check for other programs.
AC_PROG_INSTALL

# Add more test

# Set LDFLAGS to generate shared library.
AC_GAUCHE_FIX_LIBS

# Output
AC_GAUCHE_EXT_FIXUP(threads)
AC_OUTPUT(Makefile)
